--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <title>About Me Main</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-    
+    <h1>Welcome to my project</h1>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
