--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <h1>Welcome to my project</h1>
+    <h2>First the asnwers to the guessing game.</h2>
+    <h3>Do you think this is my first experiance coding?</h3>
+    <p id="qOneAns"></p>
+    <h3>Do you think I am a coffee drinker?</h3>
+    <p id="qTwoAns"></p>
+    <h3>Do I drive to Code Fellows?</h3>
+    <p id="qThreeAns"></p>
+    <h3>Do I have pets?</h3>
+    <p id="qFourAns"></p>
+    <h3>Is mint chip the best flavor of ice cream?</h3>
+    <p id="qFIveAns"></p>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
