--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>About Me Main</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+  <meta charset="utf-8" />
+  <title>About Me Main</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+  <header>
     <h1>Welcome to my project</h1>
+  </header>
+  <section class='guessingGame'>
     <h2>First the asnwers to the guessing game.</h2>
     <h3>Do you think this is my first experiance coding?</h3>
     <p id="qOneAns"></p>
@@ -19,6 +22,11 @@
     <p id="qFourAns"></p>
     <h3>Is mint chip the best flavor of ice cream?</h3>
     <p id="qFIveAns"></p>
-    <script type="text/javascript" src="js/app.js"></script>
+    <h3>In my intro I mentioned i earned 2 distinct black belts. Can you guess what basic styles they are in?</h3>
+    <p id="qSixAns"></p>
+    <h3>I mentioned my love for game design. Can you guess how many steam games I own? (Hint it's a 3 digit number.)</h3>
+    <p id="qSevenAns"></p>
+  </section>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
