--- a/index.html
+++ b/index.html
@@ -10,23 +10,49 @@
   <header>
     <h1>Welcome to my project</h1>
   </header>
-  <section class='guessingGame'>
-    <h2>First the asnwers to the guessing game.</h2>
-    <h3>Do you think this is my first experiance coding?</h3>
-    <p id="qOneAns"></p>
-    <h3>Do you think I am a coffee drinker?</h3>
-    <p id="qTwoAns"></p>
-    <h3>Do I drive to Code Fellows?</h3>
-    <p id="qThreeAns"></p>
-    <h3>Do I have pets?</h3>
-    <p id="qFourAns"></p>
-    <h3>Is mint chip the best flavor of ice cream?</h3>
-    <p id="qFIveAns"></p>
-    <h3>In my intro I mentioned i earned 2 distinct black belts. Can you guess what basic styles they are in?</h3>
-    <p id="qSixAns"></p>
-    <h3>I mentioned my love for game design. Can you guess how many steam games I own? (Hint it's a 3 digit number.)</h3>
-    <p id="qSevenAns"></p>
+  <section id="content">
+    <article class='guessingGame'>
+      <h2>First the asnwers to the guessing game.</h2>
+      <h3>Do you think this is my first experiance coding?</h3>
+      <p id="qOneAns">I've been playing with c# for a while but this will be my first professional attempt</p>
+      <h3>Do you think I am a coffee drinker?</h3>
+      <p id="qTwoAns">Never. Can't stand the stuff. I'll go for a 5-hour Energy if a I need a pick me up.</p>
+      <h3>Do I drive to Code Fellows?</h3>
+      <p id="qThreeAns">I live on the eastside so I need to fight traffic to get here.</p>
+      <h3>Do I have pets?</h3>
+      <p id="qFourAns">My roomates haev a dog. That counts right?</p>
+      <h3>Is mint chip the best flavor of ice cream?</h3>
+      <p id="qFIveAns">Nothing beats mint chip.</p>
+      <h3>In my intro I mentioned i earned 2 distinct black belts. Can you guess what basic styles they are in?</h3>
+      <p id="qSixAns">Nice job. I studied in a shudo kan karate and a taikwando based system called jungyae moo do.</p>
+      <h3>I mentioned my love for game design. Can you guess how many Steam games I own? (Hint it's a 3 digit number.)</h3>
+      <p id="qSevenAns">I have over 450 Steam games</p>
+    </article>
+    <article class='topTenVideoGames'>
+      <h3>My top 10 games based on design and impact</h3>
+      <ol>
+        <li>Final Fantasy 9</li>
+        <li>Chrono Trigger</li>
+        <li>Gone Home</li>
+        <li>Undertale</li>
+        <li>Byond Two Souls</li>
+        <li>Brothers: A tale of two sons</li>
+        <li>World of Warcraft</li>
+        <li>StarCraft 2</li>
+        <li>Doom (2016)</li>
+        <li>Transistor</li>
+      </ol>
+    </article>
+    <article class="topFoods">
+      <h3>Some foods of choice</h3>
+      <ul>
+        <li>Pizza</li>
+        <li>BBQ ribs</li>
+        <li>Sirloin Steak</li>
+        <li>Pasta</li>
+      </ul>
+    </article>
   </section>
-  <script type="text/javascript" src="js/app.js"></script>
+  <!-- <script type="text/javascript" src="js/app.js"></script> -->
 </body>
 </html>
