CSS working for now. WIll update as we learn more

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>About Me Main</title>
-  <link rel="stylesheet" href="css/reset.css" />
+  <!-- <link rel="stylesheet" href="css/reset.css" /> -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to my project</h1>
+    <h1>About Me (working title)</h1>
   </header>
   <section id="content">
     <article class='guessingGame'>
@@ -20,7 +20,7 @@
       <h3>Do I drive to Code Fellows?</h3>
       <p id="qThreeAns">I live on the eastside so I need to fight traffic to get here.</p>
       <h3>Do I have pets?</h3>
-      <p id="qFourAns">My roomates haev a dog. That counts right?</p>
+      <p id="qFourAns">My roomates have a dog. That counts right?</p>
       <h3>Is mint chip the best flavor of ice cream?</h3>
       <p id="qFIveAns">Nothing beats mint chip.</p>
       <h3>In my intro I mentioned i earned 2 distinct black belts. Can you guess what basic styles they are in?</h3>
