Forgot to un comment the script tag

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       </ul>
     </article>
   </section>
-  <!-- <script type="text/javascript" src="js/app.js"></script> -->
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
