Style tweaks and spell check

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <section id="content">
     <article class='guessingGame'>
-      <h2>First the asnwers to the guessing game.</h2>
+      <h2>Guessing Game</h2>
       <h3>Do you think this is my first experiance coding?</h3>
       <p id="qOneAns">I've been playing with c# for a while but this will be my first professional attempt</p>
       <h3>Do you think I am a coffee drinker?</h3>
@@ -51,6 +51,9 @@
         <li>Sirloin Steak</li>
         <li>Pasta</li>
       </ul>
+    </article>
+    <article class="picture">
+      <img src="img/ninja.jpg" alt="Profile ninja picture" title="Ninja" class="ninja">
     </article>
   </section>
   <script type="text/javascript" src="js/app.js"></script>
